--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-  <p><a href="/registerl.html">Login page</a></p>
+<a href="/registerl.html">Login page</a>
   
 <div class = "container">
     <div class = "meal-wrapper">
